[package]
name = "ntex_files"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ntex = {version="0.6",features=["tokio","compress"]}
ntex-files = "0.2"
ntex-session = "0.2"
ntex-identity="0.2"
anyhow = "1"
log = "0.4"
env_logger = "0.10"
time = "0.3"
futures = "0.3"
rand = "0.8"