[package]
name = "ntex_files"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ntex = {version="0.7",features=["tokio","compress"]}
clia-ntex-files = "0.3"
clia-ntex-session = "0.3"
clia-ntex-identity="0.3"
anyhow = "1"
log = "0.4"
env_logger = "0.10"
time = "0.3"
futures = "0.3"
rand = "0.8"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1"